--- a/test-task/inertstoy-home/scss/blocks/_page-nav.scss
+++ b/test-task/inertstoy-home/scss/blocks/_page-nav.scss
@@ -3,7 +3,7 @@
     display: flex;
     background-color: $color-whisper;
     border-radius: 10px;
-    align-items: center;
+    align-items: flex-end;
     font-size: 13px;
     font-weight: 500;
     line-height: 15px;
@@ -13,8 +13,10 @@
 
     &__list {
         display: flex;
+        flex-wrap: wrap;
         list-style-type: none;
-        gap: 55px;
+        row-gap: 20px;
+        column-gap: 54px;
         padding: 0;
         margin: 0;
         align-items: center;
@@ -25,15 +27,16 @@
         align-items: center;
         gap: 6px;
 
+
         &--active {
             margin: 0 -17px 0 0;
             background-color: $color-alizarin;
             padding: 10px;
             border-radius: 10px;
+            min-width: 105px;
 
             .page-nav__item-link {
                 color: $color-white;
-
             }
         }
 
@@ -47,7 +50,7 @@
     }
 
     &__price {
-        margin: 0 0 0 auto;
+        margin: auto 0 0 auto;
         display: flex;
         align-items: center;
         gap: 10px;
@@ -57,6 +60,6 @@
         border-radius: 10px;
         font-weight: 600;
         color: $color-maire;
-
+        min-width: 140px;
     }
 }
