--- a/test-task/inertstoy-home/scss/blocks/_btn.scss
+++ b/test-task/inertstoy-home/scss/blocks/_btn.scss
@@ -2,6 +2,7 @@
     border: none;
     border-radius: 10px;
     text-align: center;
+    cursor: pointer;
 
     &-calculation {
         width: 207px;
