--- a/test-task/inertstoy-home/scss/blocks/_swiper.scss
+++ b/test-task/inertstoy-home/scss/blocks/_swiper.scss
@@ -3,6 +3,6 @@
     height: 430px;
 }
 
-.swiper-pagination-bullet-active {
-    background-color: red;
-}
+// .swiper-pagination-bullet-active {
+//     background-color: red;
+// }
