--- a/test-task/inertstoy-home/scss/global/_fonts.scss
+++ b/test-task/inertstoy-home/scss/global/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../../fonts/Roboto-Regular.woff2") format("woff2"),
+  src: url("../../fonts/Roboto-Regular.ttf") format("ttf"),
     url("../../fonts/Roboto-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("../../fonts/Roboto-Medium.woff2") format("woff2"),
+  src: url("../../fonts/Roboto-Medium.ttf") format("ttf"),
     url("../../fonts/Roboto-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("../../fonts/Roboto-Bold.woff2") format("woff2"),
+  src: url("../../fonts/Roboto-Bold.ttf") format("ttf"),
     url("../../fonts/Roboto-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
