--- a/test-task/inertstoy-home/scss/global/_reboot.scss
+++ b/test-task/inertstoy-home/scss/global/_reboot.scss
@@ -29,3 +29,10 @@ a {
   text-decoration: none;
   color: $color-maire;
 }
+
+h2 {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 50px;
+  margin: 0;
+}
