--- a/test-task/inertstoy-home/css/style.css
+++ b/test-task/inertstoy-home/css/style.css
@@ -754,6 +754,33 @@ h2 {
   width: 1280px;
   height: 430px;
 }
+.swiper-pagination-bullet {
+  background-color: #ffffff;
+  opacity: 1;
+  width: 20px;
+  height: 20px;
+  margin: 0 7px !important;
+}
+.swiper-pagination-bullet-active {
+  background-color: #E93536;
+}
+.swiper-button-next, .swiper-button-prev {
+  color: #ffffff;
+}
+.swiper-button-next::after, .swiper-button-prev::after {
+  content: "";
+  width: 39px;
+  height: 80px;
+  background-color: #1D1D1B;
+  filter: blur(20px);
+  opacity: 0.4;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
 
 .catalog-wrapper {
   margin: 0 0 50px;
