--- a/test-task/inertstoy-home/scss/blocks/_swiper.scss
+++ b/test-task/inertstoy-home/scss/blocks/_swiper.scss
@@ -17,6 +17,11 @@
     &-button-next, 
     &-button-prev {
         color: $color-white;
+
+        svg {
+            width: 50px;
+            height: 50px;
+        }
     }
 
     &-button-next::after, 
