--- a/test-task/inertstoy-home/css/style.css
+++ b/test-task/inertstoy-home/css/style.css
@@ -350,6 +350,10 @@ h2 {
   margin: 0;
 }
 
+section {
+  margin: 0 0 50px;
+}
+
 .container {
   width: 100%;
   max-width: 1320px;
@@ -719,9 +723,6 @@ h2 {
   padding: 50px;
   border-radius: 20px;
 }
-.banner-wrapper {
-  margin: 0 0 50px;
-}
 .banner__content {
   padding: 30px;
   margin: 0 auto 0 0;
@@ -786,9 +787,6 @@ h2 {
   z-index: -1;
 }
 
-.catalog-wrapper {
-  margin: 0 0 50px;
-}
 .catalog__header {
   display: flex;
   justify-content: space-between;
@@ -828,4 +826,69 @@ h2 {
   font-weight: 800;
   line-height: 30px;
   text-align: center;
+}
+
+.services__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  margin: -3px 0 30px;
+}
+.services__header__link {
+  min-width: 127px;
+}
+.services__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+}
+.services__list-item {
+  background-color: #DBDBDB;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  position: relative;
+  align-items: flex-start;
+  border-radius: 20px;
+  min-height: 293px;
+  padding: 26px;
+}
+.services__list-item--flat {
+  grid-column: 1/3;
+}
+.services__list-item__headinng {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 32px;
+  margin: 0;
+  max-width: 293px;
+}
+.services__list-item__caption {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  text-align: left;
+  max-width: 293px;
+}
+.services__list-item__link {
+  margin: auto 0 0;
+  padding: 18px 22px;
+}
+.services__list-item__img {
+  position: absolute;
+}
+.services__list-item__img--1 {
+  top: 3px;
+  right: -12px;
+}
+.services__list-item__img--2 {
+  top: -13px;
+  right: -22px;
+}
+.services__list-item__img--3 {
+  bottom: 0;
+  right: 0;
 }/*# sourceMappingURL=style.css.map */
