--- a/test-task/inertstoy-home/scss/blocks/_services.scss
+++ b/test-task/inertstoy-home/scss/blocks/_services.scss
@@ -59,13 +59,13 @@
                 position: absolute;
 
                 &--1 {
-                    top: 3px;
-                    right: -12px;
+                    top: 1%;
+                    right: -2%;
                 }
 
                 &--2 {
-                    top: -13px;
-                    right: -22px;
+                    top: -4%;
+                    right: -3%;
                 }
 
                 &--3 {
