--- a/test-task/inertstoy-home/scss/blocks/_border.scss
+++ b/test-task/inertstoy-home/scss/blocks/_border.scss
@@ -1,15 +1,27 @@
-.border-top {
+.border{
     border: 1px solid $color-alizarin;
     border-radius: 20px;
     width: 100%;
-    height: 50px;
-    border-bottom: none;
+    height: 100%;
     position: absolute;
 
+    &-top {
+    height: 50px;
+    border-bottom: none;
+
+        &__overlay {
+            width: 101%;
+            position: absolute;
+            right: 50%;
+            transform: translateX(50%);
+            top: 24px;
+            z-index: 1;
+        }
+    }
+    
     &__overlay {
-        background-color: $color-gainsboro-2;
         width: 101%;
-        height: 30px;
+        height: calc(100% - 48px);
         position: absolute;
         right: 50%;
         transform: translateX(50%);
