--- a/test-task/inertstoy-home/css/style.css
+++ b/test-task/inertstoy-home/css/style.css
@@ -1009,4 +1009,89 @@ section {
   font-weight: 400;
   line-height: 23px;
   text-align: center;
+}
+
+.top__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  margin: 0 0 30px;
+}
+.top__header__link {
+  padding: 17px 30px;
+}
+.top__catalog {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.top__catalog__product-card {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 10px 5px;
+  border-radius: 20px;
+  max-width: 305px;
+}
+.top__catalog__product-card__img {
+  border-radius: 10px;
+  width: 285px;
+  height: 255px;
+}
+.top__catalog__product-card__content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 0 15px;
+  height: 100%;
+}
+.top__catalog__product-card__price {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 32px;
+  color: #E93536;
+}
+.top__catalog__product-card__name {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+}
+.top__catalog__product-card__availability {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin: auto 0 0;
+}
+.top__catalog__product-card__bottom {
+  padding: 0 15px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+  gap: 30px;
+  align-items: center;
+}
+.top__catalog__product-card__cart {
+  padding: 10px;
+  min-width: 178px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+.top__catalog__product-card__fav {
+  background-color: #E3E3E3;
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  flex-shrink: 0;
 }/*# sourceMappingURL=style.css.map */
