--- a/test-task/inertstoy-home/scss/global/_variables.scss
+++ b/test-task/inertstoy-home/scss/global/_variables.scss
@@ -10,6 +10,7 @@ $color-maire:        #1D1D1B;
 $color-midnight:     #2E363E;
 $color-alizarin:     #E93536;
 $color-mts:          #E30613;
+$color-vanilla-ice:  #EFCBCB;
 
 
 // Typography
