--- a/test-task/inertstoy-home/scss/blocks/_border.scss
+++ b/test-task/inertstoy-home/scss/blocks/_border.scss
@@ -6,11 +6,16 @@
     position: absolute;
 
     &-top {
-    height: 50px;
-    border-bottom: none;
+        border: 1px solid $color-alizarin;
+        border-radius: 20px;
+        width: 100%;
+        position: absolute;    
+        height: 50px;
+        border-bottom: none;
 
         &__overlay {
             width: 101%;
+            height: 30px;
             position: absolute;
             right: 50%;
             transform: translateX(50%);
