--- a/test-task/inertstoy-home/scss/style.scss
+++ b/test-task/inertstoy-home/scss/style.scss
@@ -24,3 +24,5 @@
 @import "blocks/_services";
 @import "blocks/_about";
 @import "blocks/_top";
+@import "blocks/_order";
+@import "blocks/_parners";
