--- a/test-task/inertstoy-home/scss/blocks/_catalog.scss
+++ b/test-task/inertstoy-home/scss/blocks/_catalog.scss
@@ -29,6 +29,11 @@
                 position: relative;
             }
 
+            &__img {
+                width: 236px;
+                height: 164px;
+            }
+
             &__name {
                 position:absolute;
                 top: 6%;
