--- a/test-task/inertstoy-home/scss/style.scss
+++ b/test-task/inertstoy-home/scss/style.scss
@@ -2,7 +2,7 @@
 /* ------------------------------------ */
 
 @import "global/_variables";
-// @import "global/_fonts";
+@import "global/_fonts";
 @import "global/_nomilize";
 @import "global/_reboot";
 @import "global/_container";
