--- a/test-task/inertstoy-home/css/style.css
+++ b/test-task/inertstoy-home/css/style.css
@@ -1,5 +1,6 @@
 /* Global */
 /* ------------------------------------ */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
   ========================================================================== */
@@ -387,6 +388,10 @@ section {
   width: 100%;
   margin: 0 0 16px;
 }
+.header__logo-img {
+  width: 108px;
+  height: 70px;
+}
 .header__caption {
   display: flex;
   flex-wrap: wrap;
@@ -402,11 +407,15 @@ section {
   max-width: 183px;
   gap: 7px;
 }
+.header__address-icon {
+  width: 24px;
+  height: 24px;
+}
 .header__phone .phone-1 .phone__icon {
   margin: 5px 0 0 15px;
 }
 .header__phone .phone-2 .phone__icon {
-  margin: -4px 0 0 0;
+  margin: -12px 0 0 0;
 }
 .header__phone svg {
   color: #BDBDBD;
@@ -499,6 +508,14 @@ section {
   gap: 6px;
   align-items: center;
 }
+.page-nav__item-icon {
+  width: 14px;
+  height: 14px;
+}
+.page-nav__item-icon--big {
+  width: 20px;
+  height: 20px;
+}
 .page-nav__price {
   margin: auto 0 0 auto;
   display: flex;
@@ -509,6 +526,10 @@ section {
   border-radius: 10px;
   font-weight: 600;
   min-width: 140px;
+}
+.page-nav__price-icon {
+  width: 14px;
+  height: 14px;
 }
 
 .btn {
@@ -530,6 +551,10 @@ section {
   line-height: 19px;
   text-align: left;
   color: #000000;
+}
+.btn-calculation__icon {
+  width: 29px;
+  height: 34px;
 }
 .btn-red {
   background-color: #E93536;
@@ -562,6 +587,15 @@ section {
 .phone__number {
   color: #2E363E;
   min-width: 147px;
+  white-space: nowrap;
+}
+.phone--1 .phone__icon {
+  width: 48px;
+  height: 13px;
+}
+.phone--2 .phone__icon {
+  width: 63px;
+  height: 25px;
 }
 
 .footer {
@@ -640,6 +674,10 @@ section {
   gap: 11px;
   margin: 0 0 22px;
 }
+.footer__email-icon {
+  width: 24px;
+  height: 24px;
+}
 .footer__contacts-btn {
   padding: 18px;
   max-width: 300px;
@@ -657,6 +695,10 @@ section {
 }
 .footer__bottom .border-top__overlay {
   background-color: #DBDBDB;
+}
+.footer__logo-img {
+  width: 137px;
+  height: 89px;
 }
 .footer__caption {
   font-size: 16px;
@@ -679,6 +721,7 @@ section {
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
+  white-space: nowrap;
 }
 .footer__calculation {
   padding: 15px 17px;
@@ -832,6 +875,10 @@ section {
   display: block;
   position: relative;
 }
+.catalog__list-item__img {
+  width: 236px;
+  height: 164px;
+}
 .catalog__list-item__name {
   position: absolute;
   top: 6%;
@@ -856,14 +903,14 @@ section {
 .services__header__link {
   min-width: 127px;
 }
-.services__list {
+.services__wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   padding: 0;
   margin: 0;
 }
-.services__list-item {
+.services__card {
   background-color: #DBDBDB;
   display: flex;
   flex-direction: column;
@@ -874,41 +921,47 @@ section {
   min-height: 293px;
   padding: 26px;
 }
-.services__list-item--flat {
+.services__card--flat {
   grid-column: 1/3;
 }
-.services__list-item__headinng {
+.services__card__headinng {
   font-size: 32px;
   font-weight: 600;
   line-height: 32px;
   margin: 0;
   max-width: 293px;
 }
-.services__list-item__caption {
+.services__card__caption {
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
   text-align: left;
   max-width: 293px;
 }
-.services__list-item__link {
+.services__card__link {
   margin: auto 0 0;
   padding: 18px 22px;
 }
-.services__list-item__img {
+.services__card__img {
   position: absolute;
 }
-.services__list-item__img--1 {
+.services__card__img--1 {
   top: 1%;
   right: -2%;
+  width: 441px;
+  height: 259px;
 }
-.services__list-item__img--2 {
+.services__card__img--2 {
   top: -4%;
   right: -3%;
+  width: 430px;
+  height: 325px;
 }
-.services__list-item__img--3 {
+.services__card__img--3 {
   bottom: 0;
   right: 0;
+  width: 901px;
+  height: 328px;
 }
 
 .about-wrapper {
@@ -1072,6 +1125,10 @@ section {
   gap: 6px;
   margin: auto 0 0;
 }
+.top__catalog__product-card__availability-icon {
+  width: 18px;
+  height: 18px;
+}
 .top__catalog__product-card__bottom {
   padding: 0 15px;
   display: flex;
@@ -1088,6 +1145,13 @@ section {
   align-items: center;
   justify-content: center;
   gap: 8px;
+}
+.top__catalog__product-card__cart-icon {
+  width: 24px;
+  height: 24px;
+}
+.top__catalog__product-card__cart-text {
+  padding-top: 1px;
 }
 .top__catalog__product-card__fav {
   background-color: #E3E3E3;
