--- a/test-task/inertstoy-home/scss/blocks/_page-nav.scss
+++ b/test-task/inertstoy-home/scss/blocks/_page-nav.scss
@@ -45,6 +45,16 @@
             gap: 6px;
             align-items: center;
         }
+
+        &-icon {
+            width: 14px;
+            height: 14px;
+
+            &--big {
+                width: 20px;
+                height: 20px;
+            }
+        }
     }
 
     &__price {
@@ -57,5 +67,10 @@
         border-radius: 10px;
         font-weight: 600;
         min-width: 140px;
+
+        &-icon {
+            width: 14px;
+            height: 14px;
+        }
     }
 }
