--- a/test-task/inertstoy-home/scss/blocks/_services.scss
+++ b/test-task/inertstoy-home/scss/blocks/_services.scss
@@ -12,66 +12,72 @@
         }
     }
 
-    &__list {
+    &__wrapper {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
         padding: 0;
         margin: 0;
+    }
 
-        &-item {
-            background-color: $color-gainsboro-2;
-            display: flex;
-            flex-direction: column;
-            gap: 14px;
-            position: relative;
-            align-items: flex-start;
-            border-radius: 20px;
-            min-height: 293px;
-            padding: 26px;
+    &__card {
+        background-color: $color-gainsboro-2;
+        display: flex;
+        flex-direction: column;
+        gap: 14px;
+        position: relative;
+        align-items: flex-start;
+        border-radius: 20px;
+        min-height: 293px;
+        padding: 26px;
 
-            &--flat {
-                grid-column: 1 / 3;
+        &--flat {
+            grid-column: 1 / 3;
+        }
+
+        &__headinng {
+            font-size: 32px;
+            font-weight: 600;
+            line-height: 32px;
+            margin: 0;
+            max-width: 293px;
+        }
+
+        &__caption {
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19px;
+            text-align: left;
+            max-width: 293px;
+        }
+
+        &__link {
+            margin: auto 0 0;
+            padding: 18px 22px;
+        }
+
+        &__img {
+            position: absolute;
+
+            &--1 {
+                top: 1%;
+                right: -2%;
+                width: 441px;
+                height: 259px;
             }
 
-            &__headinng {
-                font-size: 32px;
-                font-weight: 600;
-                line-height: 32px;
-                margin: 0;
-                max-width: 293px;
+            &--2 {
+                top: -4%;
+                right: -3%;
+                width: 430px;
+                height: 325px;
             }
 
-            &__caption {
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 19px;
-                text-align: left;
-                max-width: 293px;
-            }
-
-            &__link {
-                margin: auto 0 0;
-                padding: 18px 22px;
-            }
-
-            &__img {
-                position: absolute;
-
-                &--1 {
-                    top: 1%;
-                    right: -2%;
-                }
-
-                &--2 {
-                    top: -4%;
-                    right: -3%;
-                }
-
-                &--3 {
-                    bottom: 0;
-                    right: 0;
-                }
+            &--3 {
+                bottom: 0;
+                right: 0;
+                width: 901px;
+                height: 328px;
             }
         }
     }
