--- a/test-task/inertstoy-home/scss/global/_fonts.scss
+++ b/test-task/inertstoy-home/scss/global/_fonts.scss
@@ -1,26 +1,1 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../../fonts/Roboto-Regular.ttf") format("ttf"),
-    url("../../fonts/Roboto-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../../fonts/Roboto-Medium.ttf") format("ttf"),
-    url("../../fonts/Roboto-Medium.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../../fonts/Roboto-Bold.ttf") format("ttf"),
-    url("../../fonts/Roboto-Bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
