--- a/test-task/inertstoy-home/scss/global/_variables.scss
+++ b/test-task/inertstoy-home/scss/global/_variables.scss
@@ -12,6 +12,8 @@ $color-alizarin:     #E93536;
 $color-mts:          #E30613;
 $color-vanilla-ice:  #EFCBCB;
 
+$color-marie-06:     rgba(29, 29, 27, 0.6);
+
 
 // Typography
 
