--- a/test-task/inertstoy-home/scss/style.scss
+++ b/test-task/inertstoy-home/scss/style.scss
@@ -25,4 +25,5 @@
 @import "blocks/_about";
 @import "blocks/_top";
 @import "blocks/_order";
-@import "blocks/_parners";
+@import "blocks/_partners";
+@import "blocks/_helpful";
