--- a/test-task/inertstoy-home/css/style.css
+++ b/test-task/inertstoy-home/css/style.css
@@ -1303,4 +1303,70 @@ section {
   height: 102px;
   top: 11px;
   left: 130px;
+}
+
+.helpful__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  margin: 0 0 30px;
+}
+.helpful__header__link {
+  min-width: 213px;
+}
+.helpful__article-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.helpful__article-card {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 305px;
+}
+.helpful__article-card__img {
+  width: 305px;
+  height: 187px;
+  border-radius: 20px;
+}
+.helpful__article-card__header {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: space-between;
+  margin: 4px 0 0;
+}
+.helpful__article-card__type {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  padding: 6px 10px;
+  border: 1px solid rgba(29, 29, 27, 0.6);
+  border-radius: 20px;
+  text-align: center;
+}
+.helpful__article-card__date {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  color: rgba(29, 29, 27, 0.6);
+  white-space: nowrap;
+}
+.helpful__article-card__name {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  margin: 0;
+}
+.helpful__article-card__link {
+  display: flex;
+  align-items: center;
+  color: #E93536;
+  gap: 6px;
+  margin: auto 0 0;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
 }/*# sourceMappingURL=style.css.map */
