--- a/test-task/inertstoy-home/scss/global/_variables.scss
+++ b/test-task/inertstoy-home/scss/global/_variables.scss
@@ -13,6 +13,7 @@ $color-mts:          #E30613;
 $color-vanilla-ice:  #EFCBCB;
 
 $color-marie-06:     rgba(29, 29, 27, 0.6);
+$color-marie-04:     rgba(29, 29, 27, 0.4);
 
 
 // Typography
