--- a/test-task/inertstoy-home/scss/style.scss
+++ b/test-task/inertstoy-home/scss/style.scss
@@ -28,3 +28,6 @@
 @import "blocks/_partners";
 @import "blocks/_helpful";
 @import "blocks/_faq";
+@import "blocks/_contacts";
+@import "blocks/_custom-plaseholder";
+@import "blocks/_custom-checkbox";
