--- a/test-task/uch-yantik/css/style.css
+++ b/test-task/uch-yantik/css/style.css
@@ -370,7 +370,7 @@ template {
 .container {
   width: 100%;
   height: 100%;
-  max-width: 1870px;
+  max-width: 1820px;
   margin: 0 auto;
   padding: 0 25px;
 }
@@ -397,7 +397,7 @@ template {
   font-size: 18px;
   font-weight: 500;
   line-height: 26px;
-  margin: 0 0 0 3%;
+  margin: 0 0 0.6% 3%;
 }
 .header__nav-list-link {
   color: #250202;
@@ -413,7 +413,7 @@ template {
   align-items: flex-start;
 }
 .header__address-wrapper {
-  margin: 0 9.5% 0 auto;
+  margin: 0 7% 0 auto;
   display: flex;
   gap: 47px;
   align-items: center;
@@ -637,15 +637,15 @@ template {
   display: flex;
   width: 100%;
   height: 100%;
-  align-items: center;
   justify-content: space-between;
-  padding: 0 102px 0 80px;
+  padding: 0 3% 0 4.5%;
 }
 .banner__content {
   max-width: 470px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
 }
 .banner__heading {
   font-family: "Soyuz Grotesk", "Arial", sans-serif;
@@ -681,6 +681,9 @@ template {
 }
 .banner__menu-text {
   color: #250202;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 26px;
 }
 .banner__next {
   display: flex;
@@ -738,4 +741,59 @@ template {
   font-size: 18px;
   font-weight: 500;
   line-height: 26px;
+}
+
+.about__wrapper {
+  width: 100%;
+  position: relative;
+}
+.about__card {
+  width: 100%;
+  min-height: 930px;
+  display: flex;
+  padding: 90px 100px;
+  color: #ffffff;
+  justify-content: space-between;
+  gap: 30px;
+}
+.about__bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 50px;
+}
+.about__part {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  align-items: flex-start;
+  justify-content: flex-end;
+  max-width: 470px;
+}
+.about__part--right {
+  justify-content: flex-start;
+}
+.about__heading {
+  font-family: "Soyuz Grotesk", "Arial", sans-serif;
+  margin: 0 0 12px;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 80px;
+}
+.about__text {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 26px;
+}
+.about__logo {
+  display: flex;
+  align-items: center;
+}
+.about__logo-icon {
+  width: 279px;
+  height: 279px;
 }/*# sourceMappingURL=style.css.map */
