--- a/test-task/uch-yantik/scss/blocks/_header.scss
+++ b/test-task/uch-yantik/scss/blocks/_header.scss
@@ -22,7 +22,7 @@
         font-size: 18px;
         font-weight: 500;
         line-height: 26px;
-        margin: 0 0 0 3%;
+        margin: 0 0 0.6% 3%;
 
         &-link {
             color: $color-seal-brown;
@@ -42,7 +42,7 @@
         align-items: flex-start;
 
         &-wrapper {
-            margin: 0 9.5% 0 auto;
+            margin: 0 7% 0 auto;
             display: flex;
             gap: 47px;
             align-items: center;
