--- a/test-task/uch-yantik/scss/blocks/_banner.scss
+++ b/test-task/uch-yantik/scss/blocks/_banner.scss
@@ -27,9 +27,8 @@
         display: flex;
         width: 100%;
         height: 100%;
-        align-items: center;
         justify-content: space-between;
-        padding: 0 102px 0 80px;
+        padding: 0 3% 0 4.5%;
     }
 
     &__content {
@@ -37,6 +36,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        justify-content: center;
     }
 
     &__heading {
@@ -78,6 +78,9 @@
 
         &-text {
             color: $color-seal-brown;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 26px;
         }
     }
 
